--- a/local_authority/index.html
+++ b/local_authority/index.html
@@ -14,6 +14,8 @@
       <input id="pass" type="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
     <script>
       function checkPassword(username, password) {
         return (username === 'admin' && password === 'strongPassword098765');
