--- a/webdecode/about.html
+++ b/webdecode/about.html
@@ -8,5 +8,7 @@
     <h2>About this Challenge</h2>
     <p>healed</p>
     <div id="secret" data-clue="aHNuQ1RGe3dlYl9kZWNvZGVfZWFzeV80YTJkNmI4Zn0="></div>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
 </body>
 </html>
