--- a/webdecode/contact.html
+++ b/webdecode/contact.html
@@ -33,6 +33,7 @@
   <footer>
     <div class="bottombar">Copyright © 2023 Your_Name. All rights reserved.</div>
   </footer>
-  
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
