--- a/cookie_monster/index.html
+++ b/cookie_monster/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cookie_monsto</title>
+    <title>twin me too</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
         form { display: inline-block; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
     </style>
 </head>
 <body>
-    <h1>cookie_monsto</h1>
+    <h1>I want a school cookie right now</h1>
     <form id="loginForm">
         <input type="text" name="username" placeholder="Username" required><br><br>
         <input type="password" name="password" placeholder="Password" required><br><br>
@@ -40,5 +40,7 @@
         return false;
     }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
 </body>
 </html>
