--- a/scavenger_hunt/index.html
+++ b/scavenger_hunt/index.html
@@ -32,6 +32,7 @@
       </div>
 
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
   </body>
 </html>
